# SynthCraft

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CONTRIBUTING.md  README.md  pypi.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.streamlit/: config.toml
config/: .env  .gitignore
config_examples/: .env  README.md  az_openai_config.yml
docs/: .env  changelog.md  conf.py  dataprivacy.md  devguide.md  faq.md  index.md  installation.md  overview.md  pre_build.py  quickstart.md  tool.md  troubleshooting.md
entry/st/: app.py
entry/st/pages/: main.py  research_management.py  settings.py
src/climb/: __init__.py
src/climb/common/: __init__.py  data_structures.py  disclaimer.py  exc.py  serialization.py  utils.py
src/climb/db/: __init__.py  _db.py  tinydb_db.py
src/climb/engine/: __init__.py  _azure_config.py  _code_execution.py  _config.py  _engine.py  _engine_openai.py  _initialization.py  _openai_token_estimation.py  common.py  const.py  engine_openai_cot.py  engine_openai_d_v2.py  engine_openai_dc.py  engine_openai_dc_v2.py  engine_openai_min_baseline.py  engine_openai_nextgen.py  engine_openai_sim.py  engine_openai_synthetic.py  engine_openai_tool_baseline.py
src/climb/tool/: __init__.py  _utils.py  tool_comms.py  tools.py
src/climb/tool/impl/: sub_agents.py  tool_autoprognosis.py  tool_autoprognosis_explainers.py  tool_balance_data.py  tool_conformal_prediction.py  tool_data_centric.py  tool_data_suite.py  tool_descriptive_stats.py  tool_exploratory_data_analysis.py  tool_feature_extraction_from_text.py  tool_feature_importance.py  tool_feature_selection.py  tool_generate_synthetic_data.py  tool_hardware.py  tool_imputation.py  tool_list_generators.py  tool_paper.py  tool_smart_testing.py  tool_upload.py
src/climb/tool/impl/smart_testing_helpers/: SMART.py  utils.py
src/climb/tool/impl_agpl/: README.md  __init__.py  tool_data_valuation.py  tool_outlier_detection.py
src/climb/ui/: __init__.py  st_common.py
tests/: conftest.py
tests/engine/: test_azure_config.py  test_code_execution.py  test_config.py
tests/tool/: conftest.py  test_tool_comms.py
tests/tool/impl/: conftest.py  test_tool_descriptive_stats.py  test_tool_exploratory_data_analysis.py  test_tool_feature_importance.py  test_tool_feature_selection.py  test_tool_imputation.py  utils.py
